--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dodecahedron Unfolder</title>
-  <script type="importmap">
+  <script src="https://cdn.tailwindcss.com"></script>
+<script type="importmap">
 {
   "imports": {
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
